--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body{
 	/* Setting the default text color, size, page background and a font stack: */
 	font-size:0.825em;
 	color:#fcfcfc;
-	background-color:#330033;
+	background-color:#421b42;
 	font-family:Arial, Helvetica, sans-serif;
 }
 
@@ -38,7 +38,7 @@ h1,h2,h3{
 h1{
 	/* The logo text */
 	font-size:3.5em;
-	padding:0.5em 0 0;
+	padding:0 0 0;
 	text-transform:uppercase;
 }
 
@@ -56,20 +56,20 @@ h2{
 	font-weight:normal;
 	letter-spacing:0.01em;
 	text-transform:uppercase;
+	margin: 2px 2px 2px 2px;
 }
-
+h4{display: inline; margin: 10px 2px 10px 2px}
 p{
 	line-height:1.5em;
 	padding-bottom:1em;
 }
 
-.line{
+hr{
 	/* The dividing line: */
-	height:1px;
 	background-color:#24404c;
 	border-bottom:1px solid #416371;
-	margin:1em 0;
 	overflow:hidden;
+    margin: 5px 0px 5px 0px;
 }
 
 div.article .line{
@@ -81,7 +81,7 @@ div.article .line{
 }
 
 div.footer .line{
-	margin:2em 0;
+	margin:2px 2px 2px 2px;
 }
 
 div.nav{
@@ -149,7 +149,7 @@ div.nav, div.article, div.nav ul li a,div.figure{
 
 div.article{
 	background-color:#663366;
-	margin:3em 0;
+	margin:1em 0;
 	padding:20px;
 	
 	text-shadow:0 2px 0 black;
